--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,14 @@
 
 .expense-table{
     width: 45%;
-    margin-left: 25%;
+    margin-left: 27%;
     margin-top: 3%;
     color: rgb(172, 219, 238);
 }
 
 .input-container{
-    width: 650px;
-    margin-left: 30%;
+    width: 800px;
+    margin-left: 27%;
     
 }
 
@@ -44,4 +44,13 @@ span{
 
 div{
     padding: 15px;
+}
+
+#button{
+    margin-top: 7%;
+    margin-left: 30%;
+    font-weight: 600;
+    font-size: 1.2rem;
+    width: 170px;
+    height: 50px;
 }
